# ASCII-Converter

./: CMakeLists.txt  README.md
assets/: sample-1.out.txt  sample-2.out.txt  sample-3.out.txt  sample-4.out.txt  sample-5.out.txt  sample-6.out.txt  sample-7.out.txt  sample-8.out.txt  sample-9.out.txt
include/: ascii-converter.h  bmp.h  errors.h  image.h
src/: ascii-converter.cpp  bmp.cpp  image.cpp  main.cpp
